small bug fix where nav items where shifting

--- a/styles/module.css
+++ b/styles/module.css
@@ -16,7 +16,7 @@
 
 }
 .nav:hover ul {
-  display: block;
+  display: inline;
 }
 
 .item a {
